Prevent name from wrapping + fix menu width

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -13,11 +13,13 @@
     margin-left: 5%;
     align-items: center;
     flex-grow: 1;
+    white-space: nowrap;
   }
 
   .right {
     justify-self: right;
     margin-right: 5%;
+    padding: 0;
   }
 
   .avatar {
@@ -40,7 +42,7 @@
     }
 
     .occupations {
-      @media screen and (max-width: 820px) {
+      @media screen and (max-width: 850px) {
         display: none;
       }
 
