--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,4 +1,5 @@
 @use "../../font" as font;
+$expandMenuWidth: 760px;
 
 .menu-container {
   .menu {
@@ -21,7 +22,7 @@
       }
     }
 
-    @media screen and (min-width: 660px) {
+    @media screen and (min-width: $expandMenuWidth) {
       display: flex;
       justify-content: right;
       width: fit-content;
@@ -65,7 +66,7 @@
       }
     }
 
-    @media screen and (min-width: 660px) {
+    @media screen and (min-width: $expandMenuWidth) {
       display: none;
     }
   }
